--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
     <Compile Include="Data\User\AdministratorRoleWithEveryoneData.cs" />
+    <Compile Include="Data\User\AgentThatLeavesTomorrow.cs" />
     <Compile Include="Data\User\ExistingPreference.cs" />
     <Compile Include="Data\User\ExistingPreferenceToday.cs" />
     <Compile Include="Data\User\RuleSetBag.cs" />
