add 2 queries' dto for student availability for validation, add GetValidatedSchedulePartsOnSchedulePeriodByQuery in sdk service
--HG--
branch : Release 7.1.356

--- a/AgentPortal/Teleopti.Ccc.AgentPortalCodeTest/Teleopti.Ccc.AgentPortalCodeTest.csproj
+++ b/AgentPortal/Teleopti.Ccc.AgentPortalCodeTest/Teleopti.Ccc.AgentPortalCodeTest.csproj
@@ -186,6 +186,7 @@
     <Compile Include="AgentPreference\ExtendedPreferenceModelTest.cs" />
     <Compile Include="AgentPreference\PreferencePresenterTest.cs" />
     <Compile Include="AgentSchedule\LegendsTest.cs" />
+    <Compile Include="AgentStudentAvailability\StudentAvailabilityModelTest.cs" />
     <Compile Include="Common\AbsenceTest.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
