--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
@@ -164,9 +164,9 @@
     <Compile Include="Core\RequestContext\DefaultSessionSpecificCookieDataProviderSettingsTest.cs" />
     <Compile Include="Core\Authentication\DataProvider\DataSourcesProviderTest.cs" />
     <Compile Include="Core\RequestContext\PersonCultureSetterTest.cs" />
-    <Compile Include="Core\RequestContext\RequestContextContextInitializerTest.cs" />
+    <Compile Include="Core\RequestContext\RequestContextInitializerTest.cs" />
     <Compile Include="Core\RequestContext\SessionSpecificCookieDataProviderTest.cs" />
-    <Compile Include="Core\RequestContext\PrincipalProviderTest.cs" />
+    <Compile Include="Core\RequestContext\PrincipalFactoryTest.cs" />
     <Compile Include="Core\RequestContext\SessionSpecificDataTest.cs" />
     <Compile Include="Core\Authentication\SignInTypeViewModelBaseTest.cs" />
     <Compile Include="Core\Authentication\ViewModelFactory\SignInViewModelFactoryTest.cs" />
