Session handling scenarios
--HG--
branch : Release 7.1.356

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -145,6 +145,12 @@
       <DependentUpon>Routing.feature</DependentUpon>
     </Compile>
     <Compile Include="RoutingStepDefinition.cs" />
+    <Compile Include="Session.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Session.feature</DependentUpon>
+    </Compile>
+    <Compile Include="SessionStepDefinition.cs" />
     <Compile Include="TeamSchedule.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -332,6 +338,10 @@
     <None Include="Routing.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Routing.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Session.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Session.feature.cs</LastGenOutput>
     </None>
     <None Include="TeamSchedule.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
