--- a/InfrastructureTest/packages.config
+++ b/InfrastructureTest/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="log4net" version="1.2.11" />
-  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.3.0-CR1" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="RhinoMocks" version="3.6" />
   <package id="SharpTestsEx" version="1.1.1" />
