--- a/Teleopti.Ccc.ApplicationConfigTest/packages.config
+++ b/Teleopti.Ccc.ApplicationConfigTest/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Iesi.Collections" version="3.2.0.4000" />
-  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.3.0-CR1" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="RhinoMocks" version="3.6" />
 </packages>
