--- a/Infrastructure/packages.config
+++ b/Infrastructure/packages.config
@@ -3,4 +3,5 @@
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="log4net" version="1.2.11" />
   <package id="NHibernate" version="3.3.0-CR1" />
+  <package id="NHibernate.Envers" version="1.1.0-CR1" />
 </packages>
