Adding SSL config to RTA artifact

--- a/BuildArtifacts/RTAWeb.config
+++ b/BuildArtifacts/RTAWeb.config
@@ -115,6 +115,7 @@
 						<dns value="localhost"/>
 					</identity>
 				</endpoint>
+				<!--WISEMETA: binding="[SDK_SSL_MEX_BINDING]"-->
 				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
 			</service>
 		</services>
@@ -122,7 +123,7 @@
 			<serviceBehaviors>
 				<behavior name="Teleopti.Ccc.Rta.WebService.TeleoptiRtaService">
 					<!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
-					<serviceMetadata httpGetEnabled="true"/>
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
 					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
 					<serviceDebug includeExceptionDetailInFaults="false"/>
                                         <serviceThrottling maxConcurrentCalls="1000" maxConcurrentInstances="1000" maxConcurrentSessions="5000000"/>
