Added menu/command to remove write protected schedules...

--- a/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
+++ b/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
@@ -572,6 +572,7 @@
     <Compile Include="Scheduling\GridlockCommands\GridlockAllRestrictionsCommand.cs" />
     <Compile Include="Scheduling\GridlockCommands\GridlockAllTagsCommand.cs" />
     <Compile Include="Scheduling\GridlockCommands\GridlockTagCommand.cs" />
+    <Compile Include="Scheduling\GridlockCommands\WriteProtectionRemoveCommand.cs" />
     <Compile Include="Scheduling\GridLockRemoverForDelete.cs" />
     <Compile Include="Scheduling\GridlockCommands\GridlockAllRotationsCommand.cs" />
     <Compile Include="Scheduling\GridlockCommands\GridlockAllRotationsDayOffCommand.cs" />
