Adding new Bindings to RTA web.config to support https

--- a/BuildArtifacts/RTAWeb.config
+++ b/BuildArtifacts/RTAWeb.config
@@ -119,6 +119,15 @@
 				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
 			</service>
 		</services>
+		<bindings>
+			<basicHttpBinding>
+				<binding name="basicHttpBinding_withSize" maxReceivedMessageSize="1000000" maxBufferSize="1000000">
+					<security mode="Transport">
+						<transport clientCredentialType="None" />
+					</security>
+				</binding>
+			</basicHttpBinding>
+		</bindings>
 		<behaviors>
 			<serviceBehaviors>
 				<behavior name="Teleopti.Ccc.Rta.WebService.TeleoptiRtaService">
