Adding SECURITY_MODE for binding

--- a/BuildArtifacts/RTAWeb.config
+++ b/BuildArtifacts/RTAWeb.config
@@ -122,7 +122,8 @@
 		<bindings>
 			<basicHttpBinding>
 				<binding name="basicHttpBinding_withSize" maxReceivedMessageSize="1000000" maxBufferSize="1000000">
-					<security mode="Transport">
+					<!--WISEMETA: mode="[SDK_SSL_SECURITY_MODE]"-->
+					<security mode="TransportCredentialOnly">
 						<transport clientCredentialType="None" />
 					</security>
 				</binding>
