Add binding configuration to endpoint.

--- a/BuildArtifacts/RTAWeb.config
+++ b/BuildArtifacts/RTAWeb.config
@@ -105,7 +105,7 @@
 		<services>
 			<service name="Teleopti.Ccc.Rta.WebService.TeleoptiRtaService" behaviorConfiguration="Teleopti.Ccc.Rta.WebService.TeleoptiRtaService">
 				<!-- Service Endpoints -->
-				<endpoint address="" binding="basicHttpBinding" contract="Teleopti.Ccc.Rta.WebService.ITeleoptiRtaService">
+				<endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Rta.WebService.ITeleoptiRtaService">
 					<!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
               identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
