Adding httpGetEnabled and httpsGetEnabled as parameter for web.config files

--- a/BuildArtifacts/RTAWeb.config
+++ b/BuildArtifacts/RTAWeb.config
@@ -133,7 +133,8 @@
 			<serviceBehaviors>
 				<behavior name="Teleopti.Ccc.Rta.WebService.TeleoptiRtaService">
 					<!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
-					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+					<!--WISEMETA: httpGetEnabled="[HTTPGETENABLED]" httpsGetEnabled="[HTTPSGETENABLED]"-->
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="false"/>
 					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
 					<serviceDebug includeExceptionDetailInFaults="false"/>
                                         <serviceThrottling maxConcurrentCalls="1000" maxConcurrentInstances="1000" maxConcurrentSessions="5000000"/>
