--- a/BuildArtifacts/SDKWeb.config
+++ b/BuildArtifacts/SDKWeb.config
@@ -263,7 +263,8 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="Host2.TeleoptiCccSdkServiceBehavior">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+		  <!--WISEMETA: httpGetEnabled="[HTTPGETENABLED]" httpsGetEnabled="[HTTPSGETENABLED]"-->
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
           <serviceThrottling maxConcurrentCalls="1000" maxConcurrentInstances="1000" maxConcurrentSessions="5000000"/>
           <dataContractSerializer maxItemsInObjectGraph="2147483646" />
