--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/packages.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/packages.config
@@ -3,5 +3,6 @@
   <package id="log4net" version="1.2.11" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="SharpTestsEx" version="1.1.1" />
+  <package id="SpecFlow" version="1.8.1" />
   <package id="WatiN" version="2.1.0" />
 </packages>
