--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
@@ -231,6 +231,10 @@
     <Compile Include="ExportForecastContainerInstaller.cs" />
     <Compile Include="ForecastContainerInstaller.cs" />
     <Compile Include="Forecast\DateOnlyPeriodExtensions.cs" />
+    <Compile Include="Forecast\ForecastFileDictionary.cs" />
+    <Compile Include="Forecast\ForecastsAnalyzeCommand.cs" />
+    <Compile Include="Forecast\ForecastsAnalyzeCommandResult.cs" />
+    <Compile Include="Forecast\ForecastsFileContentProvider.cs" />
     <Compile Include="Forecast\ImportForecastsFileToSkillConsumer.cs" />
     <Compile Include="Forecast\ImportForecastsToSkillConsumer.cs" />
     <Compile Include="Forecast\OpenAndSplitChildSkillsConsumer.cs" />
@@ -238,6 +242,7 @@
     <Compile Include="Forecast\ExportMultisiteSkillToSkillConsumer.cs" />
     <Compile Include="Forecast\JobResultFeedback.cs" />
     <Compile Include="Forecast\OpenAndSplitTargetSkillConsumer.cs" />
+    <Compile Include="Forecast\WorkloadDayOpenHoursDictionary.cs" />
     <Compile Include="InitialLoadOfScheduleProjectionReadModel.cs" />
     <Compile Include="IPersonAbsenceAccountProvider.cs" />
     <Compile Include="IRequestFactory.cs" />
