fix for 18634 team schedule now workt in right-to-left
--HG--
branch : Release 7.1.356

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
@@ -145,7 +145,7 @@
     <Compile Include="Controllers\PreferenceControllerTest.cs" />
     <Compile Include="Controllers\RequestsControllerTest.cs" />
     <Compile Include="Core\DatePatternConverterTest.cs" />
-    <Compile Include="Core\Portal\LayoutBaseHtmlHelperTest.cs" />
+    <Compile Include="Areas\MyTime\Core\LayoutBase\LayoutBaseHtmlHelperTest.cs" />
     <Compile Include="TestHtmlHelperBuilder.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="StubbingControllerBuilder.cs" />
