--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -622,6 +622,7 @@
     <Compile Include="Domain\ModifyEventArgs.cs" />
     <Compile Include="Domain\PeriodValueCalculationMethodOption.cs" />
     <Compile Include="Domain\ExternalAgentState.cs" />
+    <Compile Include="Domain\ScheduleChangedInDefaultScenario.cs" />
     <Compile Include="Domain\ScheduleModifier.cs" />
     <Compile Include="Domain\SchedulePartView.cs" />
     <Compile Include="Domain\ScheduleVisibleReasons.cs" />
