--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -228,9 +228,13 @@
     <Compile Include="Forecasting\Export\SkillExportCombination.cs" />
     <Compile Include="Forecasting\Export\SkillExportSelection.cs" />
     <Compile Include="Forecasting\ForecastsFile\CsvFileReader.cs" />
-    <Compile Include="Forecasting\ForecastsFile\CsvFileWriter.cs" />
     <Compile Include="Forecasting\ForecastsFile\CsvFileRow.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileDateTimeValidator.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileDoubleValueValidator.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileIntegerValueValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileRow.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileRowCreator.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileSkillNameValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ImportForecastsOptions.cs" />
     <Compile Include="Forecasting\Import\ForecastFile.cs" />
