Added step definition "I have a preference with end time limitation between (.*) and (.*)"

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
     <Compile Include="Data\User\AdministratorRoleWithEveryoneData.cs" />
     <Compile Include="Data\User\AgentThatLeavesTomorrow.cs" />
+    <Compile Include="Data\User\ExistingExtendedPreferenceToday.cs" />
     <Compile Include="Data\User\ExistingPreference.cs" />
     <Compile Include="Data\User\ExistingPreferenceToday.cs" />
     <Compile Include="Data\User\RuleSetBag.cs" />
