--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Forecast\JobResultFeedback.cs" />
     <Compile Include="Forecast\OpenAndSplitTargetSkillConsumer.cs" />
     <Compile Include="Forecast\WorkloadDayOpenHoursDictionary.cs" />
+    <Compile Include="ImportForecastContainerInstaller.cs" />
     <Compile Include="InitialLoadOfScheduleProjectionReadModel.cs" />
     <Compile Include="IPersonAbsenceAccountProvider.cs" />
     <Compile Include="IRequestFactory.cs" />
