--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.ServiceHost/App.config
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.ServiceHost/App.config
@@ -9,9 +9,9 @@
     <add key="chunkTimeSpan" value="2" />
     <add key="pmInstallation" value="False" />
     <add key="isolationLevel" value="ReadCommitted" />
-    <add key="datamartConnectionString" value="Data source=.;User Id=sa;Password=cadadi;Application name=Teleopti.Analytics.Etl.ConfigTool;Initial Catalog=Demoreg_TeleoptiAnalytics" />
-    <add key="MessageBroker" value="Data Source=.;User Id=sa;Password=cadadi;Application name=Teleopti.Analytics.Etl.ConfigTool;Initial Catalog=Demoreg_TeleoptiAnalytics" />
-    <add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=Demoreg_TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000" />
+    <add key="datamartConnectionString" value="Data source=.;User Id=sa;Password=rogermoore;Application name=Teleopti.Analytics.Etl.ConfigTool;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics" />
+    <add key="MessageBroker" value="Data Source=.;User Id=sa;Password=rogermoore;Application name=Teleopti.Analytics.Etl.ConfigTool;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics" />
+    <add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000" />
   </appSettings>
   <log4net>
     <appender name="EventAppender" type="log4net.Appender.EventLogAppender">
