--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Web.config
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Web.config
@@ -2,23 +2,23 @@
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Teleopti.Analytics.Portal.AnalyzerProxy.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="Teleopti.Analytics.Portal.AnalyzerProxy.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <!--<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />-->
   </configSections>
   <connectionStrings>
-    <clear/>
-    <add name="LocalSqlServer" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=cadadi;Initial Catalog=OlaHg_Demoreg_TeleoptiAnalytics"/>
-    <add name="Database" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=cadadi;Initial Catalog=OlaHg_Demoreg_TeleoptiAnalytics;Application Name=Teleopti.CCC.Analytics.WebPortal"/>
-    <add name="Cube" connectionString="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=OlaHg_Demoreg_TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000"/>
+    <clear />
+    <add name="LocalSqlServer" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=rogermoore;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics" />
+    <add name="Database" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=rogermoore;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics;Application Name=Teleopti.CCC.Analytics.WebPortal" />
+    <add name="Cube" connectionString="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000" />
   </connectionStrings>
   <system.web>
     <membership userIsOnlineTimeWindow="60">
       <providers>
-        <add requiresUniqueEmail="false" connectionStringName="Database" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" minRequiredPasswordLength="3" minRequiredNonalphanumericCharacters="0" passwordFormat="Hashed" applicationName="/" name="SqlProvider" type="System.Web.Security.SqlMembershipProvider"/>
+        <add requiresUniqueEmail="false" connectionStringName="Database" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" minRequiredPasswordLength="3" minRequiredNonalphanumericCharacters="0" passwordFormat="Hashed" applicationName="/" name="SqlProvider" type="System.Web.Security.SqlMembershipProvider" />
       </providers>
     </membership>
-    <anonymousIdentification enabled="false"/>
+    <anonymousIdentification enabled="false" />
     <!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
@@ -27,10 +27,10 @@
         -->
     <compilation debug="true">
       <assemblies>
-        <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-        <add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-        <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-        <add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
     </compilation>
     <!--
@@ -40,12 +40,12 @@
         -->
     <!--WISEMETA: mode="[IIS_AUTH]"-->
     <authentication mode="Windows">
-      <forms defaultUrl="Selection.aspx"/>
+      <forms defaultUrl="Selection.aspx" />
     </authentication>
-    <identity impersonate="true"/>
+    <identity impersonate="true" />
     <authorization>
-      <deny users="?"/>
-      <allow users="*"/>
+      <deny users="?" />
+      <allow users="*" />
     </authorization>
     <!--
             The <customErrors> section enables configuration 
@@ -59,30 +59,31 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-    <customErrors mode="Off"/>
-    <globalization enableClientBasedCulture="true" uiCulture="auto"></globalization>
+    <customErrors mode="Off" />
+    <globalization enableClientBasedCulture="true" uiCulture="auto">
+    </globalization>
     <pages theme="Theme1">
       <controls>
-        <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-        <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </controls>
     </pages>
     <httpHandlers>
-      <remove verb="*" path="*.asmx"/>
+      <remove verb="*" path="*.asmx" />
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" validate="false" />
-      <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
+      <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
     </httpHandlers>
     <httpModules>
-      <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </httpModules>
   </system.web>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-        <providerOption name="CompilerVersion" value="v3.5"/>
-        <providerOption name="WarnAsError" value="false"/>
+        <providerOption name="CompilerVersion" value="v3.5" />
+        <providerOption name="WarnAsError" value="false" />
       </compiler>
     </compilers>
   </system.codedom>
@@ -91,45 +92,42 @@
         Information Services 7.0.  It is not necessary for previous version of IIS.
     -->
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <modules>
-      <remove name="ScriptModule"/>
-      <add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <remove name="ScriptModule" />
+      <add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </modules>
     <handlers>
-      <remove name="WebServiceHandlerFactory-Integrated"/>
-      <remove name="ScriptHandlerFactory"/>
-      <remove name="ScriptHandlerFactoryAppServices"/>
-      <remove name="ScriptResource"/>
+      <remove name="WebServiceHandlerFactory-Integrated" />
+      <remove name="ScriptHandlerFactory" />
+      <remove name="ScriptHandlerFactoryAppServices" />
+      <remove name="ScriptResource" />
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-      <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/>
+        <assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Extensions.Design" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/>
+        <assemblyIdentity name="System.Web.Extensions.Design" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
-
   <applicationSettings>
-
     <Teleopti.Analytics.Portal.AnalyzerProxy.Properties.Settings>
       <setting name="Teleopti_Analytics_Portal_AnalyzerProxy_AnalyzerRef_Analyzer2005" serializeAs="String">
         <value>
           http://localhost/TeleoptiPM/services/Analyzer2005.asmx
         </value>
       </setting>
-		<!--
+      <!--
 			How to change authentication for PM Analyzer:
 			*********************************************
 			*** Windows authentication ***
@@ -153,24 +151,24 @@
 			5. Make sure that the given domain user must exist in PM/Analyzer as a user and a is member of the Analyzer Admin role.
 			6. Make sure the ETL service runs as the "PM_Anonymous_User_Name"
 -->
-		<setting name="PM_Authentication_Mode" serializeAs="String">
-			<!--WISEMETA: value="[PM_AUTH_MODE]"-->
-			<value>Windows</value>
-		</setting>
-		<setting name="PM_Anonymous_User_Name" serializeAs="String">
-			<!--WISEMETA: value="[PM_ANONYMOUS_DOMAINUSER]"-->
-			<value>yourDomain\yourUser</value>
-		</setting>
-		<setting name="PM_Anonymous_User_Password" serializeAs="String">
-			<!--WISEMETA: value="[PM_ANONYMOUS_PWD]"-->
-			<value>yourPwd</value>
-		</setting>
+      <setting name="PM_Authentication_Mode" serializeAs="String">
+        <!--WISEMETA: value="[PM_AUTH_MODE]"-->
+        <value>Windows</value>
+      </setting>
+      <setting name="PM_Anonymous_User_Name" serializeAs="String">
+        <!--WISEMETA: value="[PM_ANONYMOUS_DOMAINUSER]"-->
+        <value>yourDomain\yourUser</value>
+      </setting>
+      <setting name="PM_Anonymous_User_Password" serializeAs="String">
+        <!--WISEMETA: value="[PM_ANONYMOUS_PWD]"-->
+        <value>yourPwd</value>
+      </setting>
     </Teleopti.Analytics.Portal.AnalyzerProxy.Properties.Settings>
   </applicationSettings>
   <appSettings>
     <!--WISEMETA: value="[CONTEXT_HELP_URL]"-->
-    <add key="HelpUrl" value="http://wiki/ccc"/>
-    <add key="cultures" value="en;ar;cs;de;es;fi;it;ru;se-SE;sk-SK;sq-AL;sv;th;tr;zh-CN"/>
+    <add key="HelpUrl" value="http://wiki/ccc" />
+    <add key="cultures" value="en;ar;cs;de;es;fi;it;ru;se-SE;sk-SK;sq-AL;sv;th;tr;zh-CN" />
   </appSettings>
   <!--<log4net>
 		<appender name="trace" type="log4net.Appender.TraceAppender, log4net">
