--- a/Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.WebService/Web.config
+++ b/Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.WebService/Web.config
@@ -24,9 +24,9 @@
   </configSections>
   <appSettings>
     <!--WISEMETA: value="[SQL_AUTH_STRING];Initial Catalog=[DB_MESSAGING]"-->
-    <add key="MessageBroker" value="Data Source=.;Initial Catalog=Demoreg_TeleoptiAnalytics;Persist Security Info=True;User Id=sa;Password=cadadi" />
+    <add key="MessageBroker" value="Data Source=.;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics;Persist Security Info=True;User Id=sa;Password=rogermoore" />
     <!--WISEMETA: value="[SQL_AUTH_STRING];Initial Catalog=[DB_ANALYTICS]"-->
-    <add key="DataStore" value="Data source=.;Initial Catalog=Demoreg_TeleoptiAnalytics;Persist Security Info=True;User Id=sa;Password=cadadi" />
+    <add key="DataStore" value="Data source=.;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics;Persist Security Info=True;User Id=sa;Password=rogermoore" />
     <add key="AuthenticationKey" value="!#¤atAbgT%" />
   </appSettings>
   <connectionStrings />
