--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -71,10 +71,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
+    <Compile Include="Data\User\Analytics\AWorkload.cs" />
     <Compile Include="Data\User\Analytics\BusinessUnit.cs" />
     <Compile Include="Data\User\Analytics\Model\bridge_time_zone.cs" />
     <Compile Include="Data\User\Analytics\Model\dim_business_unit.cs" />
     <Compile Include="Data\User\Analytics\Model\dim_skill.cs" />
+    <Compile Include="Data\User\Analytics\Model\dim_workload.cs" />
     <Compile Include="Data\User\Analytics\Model\sys_datasource.cs" />
     <Compile Include="Data\User\Analytics\Sql\Bulk.cs" />
     <Compile Include="Data\User\Analytics\BridgeTimeZoneFromDatesIntervalsAndTimeZones.cs" />
