Ok, got a week of report data, now the sunday has to be displayed first as an american

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Data\User\Analytics\AQueue.cs" />
     <Compile Include="Data\User\Analytics\AWorkload.cs" />
     <Compile Include="Data\User\Analytics\BusinessUnit.cs" />
+    <Compile Include="Data\User\Analytics\CurrentWeekDates.cs" />
     <Compile Include="Data\User\Analytics\ExistingDatasources.cs" />
     <Compile Include="Data\User\Analytics\FactQueue.cs" />
     <Compile Include="Data\User\Analytics\FillBridgeQueueWorkloadFromData.cs" />
